projects/tpdsl-code/code/symtab/aggr/CymbolParser.java
/***
 * Excerpted from "Language Implementation Patterns",
 * published by The Pragmatic Bookshelf.
 * Copyrights apply to this code. It may not be used to create training material, 
 * courses, books, articles, and the like. Contact us if you are in doubt.
 * We make no guarantees that this code is fit for any purpose. 
 * Visit http://www.pragmaticprogrammer.com/titles/tpdsl for more book information.
***/
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g 2009-09-23 17:37:54

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class CymbolParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "METHOD_DECL", "ARG_DECL", "BLOCK", "VAR_DECL", "FIELD_DECL", "CALL", "ELIST", "EXPR", "ID", "INT", "LETTER", "WS", "SL_COMMENT", "'struct'", "'{'", "'}'", "';'", "'('", "')'", "','", "'float'", "'int'", "'void'", "'='", "'return'", "'+'", "'.'"
    };
    public static final int LETTER=14;
    public static final int T__28=28;
    public static final int T__23=23;
    public static final int T__20=20;
    public static final int EXPR=11;
    public static final int ARG_DECL=5;
    public static final int WS=15;
    public static final int T__21=21;
    public static final int T__19=19;
    public static final int FIELD_DECL=8;
    public static final int T__22=22;
    public static final int T__29=29;
    public static final int BLOCK=6;
    public static final int T__30=30;
    public static final int T__17=17;
    public static final int INT=13;
    public static final int EOF=-1;
    public static final int T__27=27;
    public static final int CALL=9;
    public static final int T__24=24;
    public static final int METHOD_DECL=4;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int VAR_DECL=7;
    public static final int SL_COMMENT=16;
    public static final int ELIST=10;
    public static final int T__18=18;
    public static final int ID=12;

    // delegates
    // delegators


        public CymbolParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CymbolParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CymbolParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g"; }


    public static class compilationUnit_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compilationUnit"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:18:1: compilationUnit : ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+ ;
    public final CymbolParser.compilationUnit_return compilationUnit() throws RecognitionException {
        CymbolParser.compilationUnit_return retval = new CymbolParser.compilationUnit_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        CymbolParser.structDeclaration_return structDeclaration1 = null;

        CymbolParser.methodDeclaration_return methodDeclaration2 = null;

        CymbolParser.varDeclaration_return varDeclaration3 = null;



        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:19:5: ( ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+ )
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:19:9: ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:19:9: ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=4;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==17) ) {
                    alt1=1;
                }
                else if ( (LA1_0==ID||(LA1_0>=24 && LA1_0<=26)) ) {
                    int LA1_3 = input.LA(2);

                    if ( (LA1_3==ID) ) {
                        int LA1_4 = input.LA(3);

                        if ( (LA1_4==21) ) {
                            alt1=2;
                        }
                        else if ( (LA1_4==20||LA1_4==27) ) {
                            alt1=3;
                        }


                    }


                }


                switch (alt1) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:21:5: structDeclaration
            	    {
            	    pushFollow(FOLLOW_structDeclaration_in_compilationUnit136);
            	    structDeclaration1=structDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, structDeclaration1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:21:25: methodDeclaration
            	    {
            	    pushFollow(FOLLOW_methodDeclaration_in_compilationUnit140);
            	    methodDeclaration2=methodDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, methodDeclaration2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:21:45: varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_compilationUnit144);
            	    varDeclaration3=varDeclaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, varDeclaration3.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"

    public static class structDeclaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "structDeclaration"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:25:1: structDeclaration : 'struct' ID '{' ( structMember )+ '}' ';' -> ^( 'struct' ID ( structMember )+ ) ;
    public final CymbolParser.structDeclaration_return structDeclaration() throws RecognitionException {
        CymbolParser.structDeclaration_return retval = new CymbolParser.structDeclaration_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token string_literal4=null;
        Token ID5=null;
        Token char_literal6=null;
        Token char_literal8=null;
        Token char_literal9=null;
        CymbolParser.structMember_return structMember7 = null;


        CommonTree string_literal4_tree=null;
        CommonTree ID5_tree=null;
        CommonTree char_literal6_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree char_literal9_tree=null;
        RewriteRuleTokenStream stream_18=new RewriteRuleTokenStream(adaptor,"token 18");
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleTokenStream stream_19=new RewriteRuleTokenStream(adaptor,"token 19");
        RewriteRuleTokenStream stream_17=new RewriteRuleTokenStream(adaptor,"token 17");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_structMember=new RewriteRuleSubtreeStream(adaptor,"rule structMember");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:26:2: ( 'struct' ID '{' ( structMember )+ '}' ';' -> ^( 'struct' ID ( structMember )+ ) )
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:26:4: 'struct' ID '{' ( structMember )+ '}' ';'
            {
            string_literal4=(Token)match(input,17,FOLLOW_17_in_structDeclaration163); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_17.add(string_literal4);

            ID5=(Token)match(input,ID,FOLLOW_ID_in_structDeclaration165); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID5);

            char_literal6=(Token)match(input,18,FOLLOW_18_in_structDeclaration167); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_18.add(char_literal6);

            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:26:20: ( structMember )+
            int cnt2=0;
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID||LA2_0==17||(LA2_0>=24 && LA2_0<=26)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:26:20: structMember
            	    {
            	    pushFollow(FOLLOW_structMember_in_structDeclaration169);
            	    structMember7=structMember();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_structMember.add(structMember7.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt2 >= 1 ) break loop2;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(2, input);
                        throw eee;
                }
                cnt2++;
            } while (true);

            char_literal8=(Token)match(input,19,FOLLOW_19_in_structDeclaration172); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_19.add(char_literal8);

            char_literal9=(Token)match(input,20,FOLLOW_20_in_structDeclaration174); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_20.add(char_literal9);



            // AST REWRITE
            // elements: ID, 17, structMember
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 26:42: -> ^( 'struct' ID ( structMember )+ )
            {
                // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:26:45: ^( 'struct' ID ( structMember )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_17.nextNode(), root_1);

                adaptor.addChild(root_1, stream_ID.nextNode());
                if ( !(stream_structMember.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_structMember.hasNext() ) {
                    adaptor.addChild(root_1, stream_structMember.nextTree());

                }
                stream_structMember.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "structDeclaration"

    public static class structMember_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "structMember"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:29:1: structMember : ( type ID ';' -> ^( FIELD_DECL type ID ) | structDeclaration );
    public final CymbolParser.structMember_return structMember() throws RecognitionException {
        CymbolParser.structMember_return retval = new CymbolParser.structMember_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID11=null;
        Token char_literal12=null;
        CymbolParser.type_return type10 = null;

        CymbolParser.structDeclaration_return structDeclaration13 = null;


        CommonTree ID11_tree=null;
        CommonTree char_literal12_tree=null;
        RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:30:2: ( type ID ';' -> ^( FIELD_DECL type ID ) | structDeclaration )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID||(LA3_0>=24 && LA3_0<=26)) ) {
                alt3=1;
            }
            else if ( (LA3_0==17) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:30:4: type ID ';'
                    {
                    pushFollow(FOLLOW_type_in_structMember198);
                    type10=type();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_type.add(type10.getTree());
                    ID11=(Token)match(input,ID,FOLLOW_ID_in_structMember200); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_ID.add(ID11);

                    char_literal12=(Token)match(input,20,FOLLOW_20_in_structMember202); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_20.add(char_literal12);



                    // AST REWRITE
                    // elements: type, ID
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 30:16: -> ^( FIELD_DECL type ID )
                    {
                        // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:30:19: ^( FIELD_DECL type ID )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FIELD_DECL, "FIELD_DECL"), root_1);

                        adaptor.addChild(root_1, stream_type.nextTree());
                        adaptor.addChild(root_1, stream_ID.nextNode());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:31:4: structDeclaration
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_structDeclaration_in_structMember217);
                    structDeclaration13=structDeclaration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, structDeclaration13.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "structMember"

    public static class methodDeclaration_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "methodDeclaration"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:35:1: methodDeclaration : type ID '(' ( formalParameters )? ')' block -> ^( METHOD_DECL type ID ( formalParameters )? block ) ;
    public final CymbolParser.methodDeclaration_return methodDeclaration() throws RecognitionException {
        CymbolParser.methodDeclaration_return retval = new CymbolParser.methodDeclaration_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID15=null;
        Token char_literal16=null;
        Token char_literal18=null;
        CymbolParser.type_return type14 = null;

        CymbolParser.formalParameters_return formalParameters17 = null;

        CymbolParser.block_return block19 = null;


        CommonTree ID15_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree char_literal18_tree=null;
        RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_formalParameters=new RewriteRuleSubtreeStream(adaptor,"rule formalParameters");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:36:5: ( type ID '(' ( formalParameters )? ')' block -> ^( METHOD_DECL type ID ( formalParameters )? block ) )
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:36:9: type ID '(' ( formalParameters )? ')' block
            {
            pushFollow(FOLLOW_type_in_methodDeclaration235);
            type14=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type14.getTree());
            ID15=(Token)match(input,ID,FOLLOW_ID_in_methodDeclaration237); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID15);

            char_literal16=(Token)match(input,21,FOLLOW_21_in_methodDeclaration239); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_21.add(char_literal16);

            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:36:21: ( formalParameters )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ID||(LA4_0>=24 && LA4_0<=26)) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:36:21: formalParameters
                    {
                    pushFollow(FOLLOW_formalParameters_in_methodDeclaration241);
                    formalParameters17=formalParameters();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_formalParameters.add(formalParameters17.getTree());

                    }
                    break;

            }

            char_literal18=(Token)match(input,22,FOLLOW_22_in_methodDeclaration244); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_22.add(char_literal18);

            pushFollow(FOLLOW_block_in_methodDeclaration246);
            block19=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block19.getTree());


            // AST REWRITE
            // elements: formalParameters, block, ID, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 37:9: -> ^( METHOD_DECL type ID ( formalParameters )? block )
            {
                // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:37:12: ^( METHOD_DECL type ID ( formalParameters )? block )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(METHOD_DECL, "METHOD_DECL"), root_1);

                adaptor.addChild(root_1, stream_type.nextTree());
                adaptor.addChild(root_1, stream_ID.nextNode());
                // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:37:34: ( formalParameters )?
                if ( stream_formalParameters.hasNext() ) {
                    adaptor.addChild(root_1, stream_formalParameters.nextTree());

                }
                stream_formalParameters.reset();
                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "methodDeclaration"

    public static class formalParameters_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "formalParameters"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:41:1: formalParameters : type ID ( ',' type ID )* -> ( ^( ARG_DECL type ID ) )+ ;
    public final CymbolParser.formalParameters_return formalParameters() throws RecognitionException {
        CymbolParser.formalParameters_return retval = new CymbolParser.formalParameters_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ID21=null;
        Token char_literal22=null;
        Token ID24=null;
        CymbolParser.type_return type20 = null;

        CymbolParser.type_return type23 = null;


        CommonTree ID21_tree=null;
        CommonTree char_literal22_tree=null;
        CommonTree ID24_tree=null;
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:42:5: ( type ID ( ',' type ID )* -> ( ^( ARG_DECL type ID ) )+ )
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:42:9: type ID ( ',' type ID )*
            {
            pushFollow(FOLLOW_type_in_formalParameters289);
            type20=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type20.getTree());
            ID21=(Token)match(input,ID,FOLLOW_ID_in_formalParameters291); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID21);

            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:42:17: ( ',' type ID )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==23) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:42:18: ',' type ID
            	    {
            	    char_literal22=(Token)match(input,23,FOLLOW_23_in_formalParameters294); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_23.add(char_literal22);

            	    pushFollow(FOLLOW_type_in_formalParameters296);
            	    type23=type();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_type.add(type23.getTree());
            	    ID24=(Token)match(input,ID,FOLLOW_ID_in_formalParameters298); if (state.failed) return retval; 
            	    if ( state.backtracking==0 ) stream_ID.add(ID24);


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);



            // AST REWRITE
            // elements: type, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 42:32: -> ( ^( ARG_DECL type ID ) )+
            {
                if ( !(stream_type.hasNext()||stream_ID.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_type.hasNext()||stream_ID.hasNext() ) {
                    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:42:35: ^( ARG_DECL type ID )
                    {
                    CommonTree root_1 = (CommonTree)adaptor.nil();
                    root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ARG_DECL, "ARG_DECL"), root_1);

                    adaptor.addChild(root_1, stream_type.nextTree());
                    adaptor.addChild(root_1, stream_ID.nextNode());

                    adaptor.addChild(root_0, root_1);
                    }

                }
                stream_type.reset();
                stream_ID.reset();

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "formalParameters"

    public static class type_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "type"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:45:1: type : ( 'float' | 'int' | 'void' | ID );
    public final CymbolParser.type_return type() throws RecognitionException {
        CymbolParser.type_return retval = new CymbolParser.type_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set25=null;

        CommonTree set25_tree=null;

        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:45:5: ( 'float' | 'int' | 'void' | ID )
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:
            {
            root_0 = (CommonTree)adaptor.nil();

            set25=(Token)input.LT(1);
            if ( input.LA(1)==ID||(input.LA(1)>=24 && input.LA(1)<=26) ) {
                input.consume();
                if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set25));
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "type"

    public static class block_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:52:1: block : '{' ( statement )* '}' -> ^( BLOCK ( statement )* ) ;
    public final CymbolParser.block_return block() throws RecognitionException {
        CymbolParser.block_return retval = new CymbolParser.block_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token char_literal26=null;
        Token char_literal28=null;
        CymbolParser.statement_return statement27 = null;


        CommonTree char_literal26_tree=null;
        CommonTree char_literal28_tree=null;
        RewriteRuleTokenStream stream_18=new RewriteRuleTokenStream(adaptor,"token 18");
        RewriteRuleTokenStream stream_19=new RewriteRuleTokenStream(adaptor,"token 19");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:53:5: ( '{' ( statement )* '}' -> ^( BLOCK ( statement )* ) )
            // /Users/parrt/research/book/TPDSL/Book/code/symtab/aggr/Cymbol.g:53:9: '{' ( statement )* '}'
            {
            char_literal26=(Token)match(input,18,FOLLOW_18_in_block372); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_18.add(char_literal26);
